// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Col should be render as Element 1`] = `
<div style="width: 100%; margin-left: 0%;" class="fect-col">
  <!---->
</div>
`;

exports[`Col should be use row gutter 1`] = `
<div class="fect-row fect-row--start fect-row--top">
  <div style="width: 100%; margin-left: 0%;" class="fect-col">
    <!---->
  </div>
</div>
`;
